# mini-cdn

./: CMakeLists.txt  README.md
include/proxy/: BandwidthEstimator.hpp  DashEngine.hpp  EchoProxy.hpp  HttpParser.hpp  HttpProxy.hpp  LruCache.hpp  MpdParser.hpp  Resolver.hpp  SocketUtils.hpp  ThreadPool.hpp
src/: DashEngine.cpp  EchoProxy.cpp  HttpParser.cpp  HttpProxy.cpp  LruCache.cpp  MpdParser.cpp  Resolver.cpp  SocketUtils.cpp  ThreadPool.cpp  main.cpp
tests/: sample_test.cpp  test_http_parser.cpp  test_lru_cache.cpp  test_resolver.cpp  test_thread_pool.cpp
tests/video_test_data/: manifest.mpd
tests/video_test_data/video_240p/: chunk-1.m4s  chunk-2.m4s  chunk-3.m4s
tests/video_test_data/video_480p/: chunk-1.m4s  chunk-2.m4s  chunk-3.m4s
